# haz-machine

./: .gitignore  .travis.yml  README.md  bench.sh  buildAndBenchLoop.sh  buildAndTest.sh  buildAndTestLoop.sh  haz-machine.cabal  hilite.sh  package.yaml  stack.yaml
benchmark/: Bench.hs  MemoryMapBench.hs
src/: Main.hs  MemoryMap.hs  OpCodes.hs  ZSCIIString.hs
test-suite/: MemoryMapSpec.hs  OpCodesSpec.hs  Spec.hs  ZSCIIStringSpec.hs
