Name: haz-machine
Version: 0.0.1
Cabal-Version: == 1.9.2
Build-Type: Simple

test-suite haz-machine-tests
    build-depends:    base, haz-machine, hspec == 2.2.3, QuickCheck == 2.8.2, vector == 0.11.0.0, hood == 0.3
    hs-source-dirs:   test-suite
    main-is:          Spec.hs
    ghc-options:     
                      -threaded
                      "-with-rtsopts=-N"
    type:             exitcode-stdio-1.0

benchmark criterion
    build-depends:    base, haz-machine, criterion, vector
    hs-source-dirs:   benchmark
    main-is:          Bench.hs
    type:             exitcode-stdio-1.0

library
    hs-source-dirs: src
    Exposed-Modules: MemoryMap, ZSCIIString, OpCodes
    Build-Depends: base >= 2.0, vector == 0.11.0.0, array
