Name: haz-machine
Version: 0.0.1
Cabal-Version: == 1.9.2
Build-Type: Simple

test-suite haz-machine-tests
    build-depends:    base, haz-machine, hspec == 2.4.4, QuickCheck == 2.10.1, vector, hood == 0.3, bytestring
    hs-source-dirs:   test-suite
    main-is:          Spec.hs
    ghc-options:     
                      -threaded
                      "-with-rtsopts=-N"
    type:             exitcode-stdio-1.0

benchmark criterion
    build-depends:    base, haz-machine, criterion
    hs-source-dirs:   benchmark
    main-is:          Bench.hs
    type:             exitcode-stdio-1.0

library
    hs-source-dirs: src
    Exposed-Modules: MemoryMap, ZSCIIString, OpCodes
    Build-Depends: base == 4.10.1.0, vector == 0.12.0.1, array, bytestring == 0.10.8.2, binary, bytestring-conversion == 0.3.1

